src/objects/appirio_core__App_Log__c.object
<CustomObject>
    <customHelpPage>appirio_core__AppLogHelp</customHelpPage>
    <description>Saves a log of general events that occur during batch processing of billing events and actuals (app logs are not used for any other area of Certinia PSA). This may include status and error messages. Administrators can use app logs to track down processing errors.</description>
    <fields>
        <fullName>appirio_core__Category__c</fullName>
        <description>Category that this log record falls into.</description>
        <externalId>true</externalId>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Data2__c</fullName>
        <description>More application data related to this log entry</description>
        <label>Data2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Data__c</fullName>
        <description>Application data related to this log entry</description>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Level__c</fullName>
        <description>Indicates verbosity of this log record. 1 = Fatal, 2 = Error, 3 = Warn, 4 = Info, 5 = Debug, 6 = Trace.</description>
        <externalId>true</externalId>
        <label>Level</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Message__c</fullName>
        <description>Message to be displayed to user.</description>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Origin__c</fullName>
        <description>Creator of this log message. Application-specific.</description>
        <externalId>true</externalId>
        <label>Origin</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>App Log</label>
    <listViews>
        <fullName>All_App_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>appirio_core__Category__c</columns>
        <columns>appirio_core__Origin__c</columns>
        <columns>appirio_core__Message__c</columns>
        <columns>appirio_core__Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All App Logs</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{YYYYMMDD}-{00000000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>